adss photos/videos to index page, adds pagination

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,5 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://picassol.co" # the base hostname & protocol for your site
 twitter_username: picassolsailing
 encoding: utf-8
-
-# Build settings
 markdown: kramdown
+paginate: 15
