--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
 title: Picassol Sailing
-email: _@alex.io
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: picassol[at]alex.io
+description: Picassol is an offshore sailing yacht that only relies on renewable energy. No diesel engine, no generator - no exhaust, no noise. Only wind, sun and water.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://picassol.co" # the base hostname & protocol for your site
 twitter_username: picassolsailing
